--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,7 +1,8 @@
-<html>
+<html lang="en-US" xml:lang="en-US">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+        <meta http-equiv="Content-Language" content="en_US" />
         <title>Bouqs Front-End Code Challenge</title>
     </head>
     <body>
