add favicon, comment code, add transition to cart width on resize

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,6 +3,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
         <meta http-equiv="Content-Language" content="en_US" />
+        <link rel="shortcut icon" href="../../favicon.ico" />
         <title>Bouqs Front-End Code Challenge</title>
     </head>
     <body>
